--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -132,3 +132,56 @@ ul li {
     gap: 10px;
   }
 }
+
+#cameraContainer {
+  text-align: center;
+  padding: 10px;
+  display: block !important;
+  max-width: 400px;
+  margin: 0 auto;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #000;
+}
+#camera {
+  width: 100% !important;
+  height: auto !important;
+  border-radius: 8px;
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+}
+#camera canvas {
+  width: 100% !important;
+  height: auto !important;
+  border-radius: 8px;
+  display: block;
+  object-fit: cover;
+}
+
+input, select, button, textarea {
+  font-size: 1.1rem;
+  padding: 14px;
+}
+
+@media (max-width: 480px) {
+  body {
+    font-size: 16px;
+    padding: 10px;
+  }
+
+  input, button, select {
+    font-size: 1.2rem;
+    padding: 14px;
+  }
+
+  h1, h2 {
+    font-size: 1.4rem;
+    margin-bottom: 15px;
+  }
+
+  form {
+    padding: 10px;
+  }
+}
